Added an id name and style

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@ h1{
     text-align: center;
 }
 
-.title{
+#title{
     font-size: 30px;
     color: rgb(172, 59, 59);
     border: 2px solid black;
