--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 *{
     font-family: Arial, Helvetica, sans-serif;
+    color: white;
 }
 
 h1{
@@ -11,20 +12,7 @@ h1{
     font-size: 30px;
     color: rgb(172, 59, 59);
     border: 2px solid black;
-}
-
-button{
-    padding: 20px;
-    margin: auto;
-    border: none;
-    border-radius: 5px;
-    background-color: rgb(106, 211, 211);
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.container{
-    width: 600px;
+    text-align: center;
     padding: 20px;
 }
 
@@ -33,5 +21,14 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
+    background-color: rgb(154, 154, 236);
+}
+
+h5{
+    font-size: 10px;
+}
+
+#text{
+    font-size: 25px;
+    text-align: center;
 }
